Fix breadcrumb overflow on narrow screens (#2317)

--- a/assets/html/scss/documenter/layout/_main.scss
+++ b/assets/html/scss/documenter/layout/_main.scss
@@ -51,6 +51,7 @@
       display: flex;
       .breadcrumb {
         flex-grow: 1;
+        overflow-x: hidden;
       }
 
       .docs-sidebar-button {
